Return form input as header with vowels replaced with _

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title></title>
   </head>
   <body>
+    <div class="container">
+      <form id="form1">
+        <div class="form-group">
+          <label for="input">Say Something</label>
+          <input type="text" class="form-control" id="string">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+      <h1 id="wordPuzzle"></h1>
+    </div>
 
   </body>
 </html>
